# Personal-Growth-RAG

./: .env.example  .gitignore  README.md  pyproject.toml
config/: image_gen.json
docs/: 00-项目总蓝图.md  01-产品需求文档.md  01-当前实现与API.md  02-架构与数据模型.md  02-系统架构设计.md  03-数据模型设计.md  03-路线图与校验.md  04-代码结构与开发规范.md  04-实施路线图.md  05-校验方案.md  06-增量更新设计.md  07-个人图谱设计.md  08-记忆与复盘设计.md  09-决策辅助设计.md  10-阶段执行手册.md  11-最小API版本实现清单.md  12-第一版MVP实现技术方案.md  13-MVP分步骤实现结构设计.md
docs/execution/: issue-breakdown-template.md  release-checklist-template.md  test-plan-template.md
docs/phases/: phase-1-mvp-local-rag-prd.md  phase-2-retrieval-quality-prd.md  phase-3-document-parsing-and-ingestion-prd.md  phase-4-usability-and-operations-prd.md  phase-5-evaluation-and-hardening-prd.md
docs/product/: 00-product-brief.md  01-roadmap-and-phase-scope.md  02-user-scenarios-and-success-metrics.md  03-constraints-and-non-goals.md
docs/specs/: evaluation-spec.md  ingestion-spec.md  metadata-and-storage-spec.md  retrieval-and-answering-spec.md
src/app/: config.py  main.py
src/app/api/: documents.py  questions.py  search.py
src/app/chunking/: splitter.py
src/app/cli/: ingest_dir.py
src/app/common/: logging.py
src/app/embeddings/: service.py
src/app/indexing/: faiss_store.py
src/app/ingestion/: parsers.py  service.py
src/app/qa/: service.py
src/app/schemas/: documents.py  questions.py  search.py
src/app/search/: service.py
src/app/storage/: database.py  models.py
src/personal_growth_rag/: main.py
src/personal_growth_rag/cli/: ingest_dir.py
(+37 files in other folders)
